--- a/module/lang/es.json
+++ b/module/lang/es.json
@@ -17,6 +17,81 @@
     "DICESONICE.NormalSpeed": "Normal",
     "DICESONICE.2xSpeed": "2x",
     "DICESONICE.3xSpeed": "3x",
+    "DICESONICE.fps": "FPS Máximos",
     "DICESONICE.Save": "Guardar",
-    "DICESONICE.Apply": "Aplicar"
+    "DICESONICE.Reset": "Volver a Valores por Defecto",
+    "DICESONICE.Apply": "Aplicar",
+    "DICESONICE.outlineColor": "Color del Contorno",
+    "DICESONICE.edgeColor": "Color de las Aristas",
+    "DICESONICE.texture": "Textura",
+    "DICESONICE.colorset" : "Tema",
+    "DICESONICE.colorsetDesc" : "Si prefieres usar un color personalizado, selecciona 'Personalizado' en la lista siguiente",
+    "DICESONICE.Low" : "Baja",
+    "DICESONICE.High" : "Alta",
+    "DICESONICE.shadowQuality" : "Calidad de las Sombras",
+    "DICESONICE.bumpMapping" : "Iluminación Avanzada",
+    "DICESONICE.sounds" : "Efectos de Sonido",
+    "DICESONICE.system" : "Preajustes de Dados (Caras)",
+    "DICESONICE.maxDiceNumber" : "Dados Máximos",
+    "DICESONICE.maxDiceNumberHint" : "Número máximos de dados que se pueden mostrar a la vez en una animación. Un número muy alto reducirá el rendimiento",
+    "DICESONICE.saveMessage": "Ajustes de los dados 3D actualizados",
+    "DICESONICE.migrateMessage": "¡Los ajustes de 'Dice So Nice' han sido actualizados a la versión 2.0 con éxito!",
+
+    "DICESONICE.TextureClouds" : "Nubes",
+    "DICESONICE.TextureFire" : "Fuego",
+    "DICESONICE.TextureMarble" : "Mármol",
+    "DICESONICE.TextureWater" : "Agua",
+    "DICESONICE.TextureIce" : "Hielo",
+    "DICESONICE.TexturePaper" : "Papel",
+    "DICESONICE.TextureSpeckles" : "Moteado",
+    "DICESONICE.TextureGlitter" : "Purpurina",
+    "DICESONICE.TextureGlitterTransparent" : "Purpurina (Transparente)",
+    "DICESONICE.TextureStars" : "Estrellas",
+    "DICESONICE.TextureStainedGlass" : "Vidrieras",
+    "DICESONICE.TextureSkulls" : "Calaveras",
+    "DICESONICE.TextureLeopard" : "Leopardo",
+    "DICESONICE.TextureTiger" : "Tigre",
+    "DICESONICE.TextureCheetah" : "Guepardo",
+    "DICESONICE.TextureAstralSea" : "Mar Astral",
+    "DICESONICE.TextureWood" : "Madera",
+    "DICESONICE.TextureMetal" : "Metal",
+    "DICESONICE.TextureNone" : "Ninguno / Automático (Tema)",
+    "DICESONICE.TextureRadial" : "Radial",
+    "DICESONICE.ColorRadiant" : "Radiante",
+    "DICESONICE.ColorFire" : "Fuego",
+    "DICESONICE.ColorIce" : "Hielo",
+    "DICESONICE.ColorPoison" : "Veneno",
+    "DICESONICE.ColorAcid" : "Ácido",
+    "DICESONICE.ColorThunder" : "Trueno",
+    "DICESONICE.ColorLightning" : "Relámpago",
+    "DICESONICE.ColorAir" : "Aire",
+    "DICESONICE.ColorWater" : "Agua",
+    "DICESONICE.ColorEarth" : "Tierra",
+    "DICESONICE.ColorForce" : "Potencia",
+    "DICESONICE.ColorPsychic" : "Psíquico",
+    "DICESONICE.ColorNecrotic" : "Necrótico",
+    "DICESONICE.ColorPastelSunset" : "Puesta de Sol Pastel",
+    "DICESONICE.ColorPinkDreams" : "Sueños Rosas",
+    "DICESONICE.ColorInspired" : "Inspirado",
+    "DICESONICE.ColorBloodMoon" : "Luna Roja",
+    "DICESONICE.ColorStaryNight" : "Noche Estrellada",
+    "DICESONICE.ColorGlitterParty" : "Fiesta de Purpurina",
+    "DICESONICE.ColorAstralSea" : "Mar Astral",
+    "DICESONICE.ColorTigerKing" : "Rey Tigre",
+    "DICESONICE.ColorToxic" : "Tóxico",
+    "DICESONICE.ColorRainblow" : "Arcoíris",
+    "DICESONICE.ColorRaNdOm" : "Aleatorio",
+    "DICESONICE.ColorBlack" : "Negro",
+    "DICESONICE.ColorWhite" : "Blanco",
+    "DICESONICE.ColorCustom" : "Personalizado",
+    "DICESONICE.ColorFoundry" : "Foundry VTT",
+
+    "DICESONICE.DamageTypes" : "Tipos de Daño",
+    "DICESONICE.ThemesSoNice" : "Temas 'So Nice'",
+    "DICESONICE.AcquiredTaste" : "Gustos Adquiridos",
+    "DICESONICE.Colors" : "Colores",
+
+    "DICESONICE.System.Standard" : "Estándar",
+    "DICESONICE.System.Dot" : "Puntos (Blancos)",
+    "DICESONICE.System.DotBlack" : "Puntos (Negros)"
 }
