--- a/module/lang/pt-BR.json
+++ b/module/lang/pt-BR.json
@@ -18,7 +18,7 @@
     "DICESONICE.3xSpeed": "3x",
     "DICESONICE.fps": "Max FPS",
     "DICESONICE.Save": "Salvar",
-    "DICESONICE.Apply": "Aplicar"
+    "DICESONICE.Apply": "Aplicar",
     "DICESONICE.outlineColor": "Cor do Contorno",
     "DICESONICE.edgeColor": "Cor das Bordas",
     "DICESONICE.texture": "Textura",
