--- a/module/lang/it.json
+++ b/module/lang/it.json
@@ -3,17 +3,21 @@
     "DICESONICE.configTitle": "Impostazioni Dadi 3D",
     "DICESONICE.configHint": "Configura le impostazioni relative ai dadi 3D quali colori e dimensione",
 
+    "DICESONICE.settingsAppearance": "Aspetto",
+    "DICESONICE.settingsPlayerPreferences": "Preferenze",
+    "DICESONICE.settingsPerformance": "Prestazioni",
     "DICESONICE.enable": "Abilita Dadi 3D",
     "DICESONICE.labelColor": "Colore Etichetta",
     "DICESONICE.diceColor": "Colore Dado",
     "DICESONICE.hideAfterRoll": "Nascondi Automaticamente",
     "DICESONICE.timeBeforeHide": "Millisecondi Prima ",
     "DICESONICE.hideFX": "Effetto Applicato",
-    "DICESONICE.autoSize": "Scale Automatico?",
-    "DICESONICE.size": "Scale Manuale",
+    "DICESONICE.autoSize": "Dimensioni Automatiche?",
+    "DICESONICE.size": "Dimensioni Manuali",
     "DICESONICE.None": "Nessuno",
     "DICESONICE.FadeOut": "Dissolvenza",
     "DICESONICE.speed": "Velocità Animazione",
+    "DICESONICE.PlayerSpeed" : "A scelta del giocatore",
     "DICESONICE.NormalSpeed": "Normale",
     "DICESONICE.2xSpeed": "2x",
     "DICESONICE.3xSpeed": "3x",
@@ -24,6 +28,7 @@
     "DICESONICE.outlineColor": "Colore Contorno",
     "DICESONICE.edgeColor": "Colore Bordo",
     "DICESONICE.texture": "Texture",
+    "DICESONICE.material": "Materiale",
     "DICESONICE.colorset" : "Tema",
     "DICESONICE.colorsetDesc" : "Se preferisci un colore personalizzato, seleziona \"Personalizzato\" in questo elenco",
     "DICESONICE.Low" : "Bassa",
@@ -31,13 +36,28 @@
     "DICESONICE.shadowQuality" : "Qualità Ombre",
     "DICESONICE.bumpMapping" : "Iluminazione Avanzata",
     "DICESONICE.sounds" : "Effetti Sonori",
+    "DICESONICE.soundsSurface" : "Superficie usata per i suoni",
+    "DICESONICE.soundsVolume": "Sound Volume",
     "DICESONICE.system" : "Collezione",
     "DICESONICE.maxDiceNumber" : "Num. Massimo Dadi",
     "DICESONICE.maxDiceNumberHint" : "Numero massimo di dadi visualizzati in un'animazione. Numeri alti ridurranno le prestazioni",
     "DICESONICE.saveMessage": "Impostazioni Dadi 3D Salvata Correttamente!",
     "DICESONICE.migrateMessage": "Le impostazioni di 'Dice So Nice' sono state migrate alla versione 2.0 con successo!",
+    "DICESONICE.diceCanBeFlipped": "I dadi possono essere scontrati e capovolti",
+    "DICESONICE.diceCanBeFlippedHint": "Quando un dado ha concluso il tiro, può essere scontrato e capovolto da un'altro dado appena tirato (il risultato non cambia)",
+    "DICESONICE.globalAnimationSpeed": "Velocità di animazione globale",
+    "DICESONICE.globalAnimationSpeedHint": "Imposta la velocità di animazione per tutti i giocatori invece di utilizzare mpostazioni personalizzate",
+    "DICESONICE.disabledDuringCombat": "Disabilitato durante il combattimento",
+    "DICESONICE.disabledDuringCombatHint": "Disabilita le animazioni 3D del tiro dei dadi quando un combattimento è attivo.",
+    "DICESONICE.enabledSimultaneousRolls": "Unisci tiri simultanei",
+    "DICESONICE.enabledSimultaneousRollsHint": "Combina tiri simultanei in un'unica animazione invece di attendere la fine di ogni tiro.",
+    "DICESONICE.canvasZIndex": "Posizione del piano 3D",
+    "DICESONICE.immediatelyDisplayChatMessages": "Visualizza immediatamente il messaggio in chat",
+    "DICESONICE.immediatelyDisplayChatMessagesHint": "Quando abilitato, non viene atteso il termine dell'animazione per mostrare la chat relativa al tiro",
+    "DICESONICE.throwingForce" : "Forza di lancio",
 
     "DICESONICE.TextureClouds" : "Nuvole",
+    "DICESONICE.TextureCloudsTransparent" : "Nuvole (Trasparenti)",
     "DICESONICE.TextureFire" : "Fuoco",
     "DICESONICE.TextureMarble" : "Marmo",
     "DICESONICE.TextureWater" : "Acqua",
@@ -57,7 +77,13 @@
     "DICESONICE.TextureMetal" : "Metallo",
     "DICESONICE.TextureNone" : "Nessuna/Auto (Tema)",
     "DICESONICE.TextureRadial" : "Radial",
-    "DICESONICE.ColorRadiant" : "Radiant",
+    "DICESONICE.TextureBronze1" : "Bronzo - 1",
+    "DICESONICE.TextureBronze2" : "Bronzo - 2",
+    "DICESONICE.TextureBronze3" : "Bronzo - 3",
+    "DICESONICE.TextureBronze3a" : "Bronzo - 3 bis",
+    "DICESONICE.TextureBronze3b" : "Bronzo - 3 ter",
+    "DICESONICE.TextureBronze4" : "Bronzo - 4",
+    "DICESONICE.ColorRadiant" : "Radiante",
     "DICESONICE.ColorFire" : "Fuoco",
     "DICESONICE.ColorIce" : "Ghiaccio",
     "DICESONICE.ColorPoison" : "Veleno",
@@ -80,17 +106,42 @@
     "DICESONICE.ColorTigerKing" : "Tiger King",
     "DICESONICE.ColorToxic" : "Toxic",
     "DICESONICE.ColorRainblow" : "Rainblow",
-    "DICESONICE.ColorRaNdOm" : "Random",
-    "DICESONICE.ColorBlack" : "Black",
-    "DICESONICE.ColorWhite" : "White",
-    "DICESONICE.ColorCustom" : "Personalizzato",
+    "DICESONICE.ColorRaNdOm" : "Casuake",
+    "DICESONICE.ColorBlack" : "Nero",
+    "DICESONICE.ColorWhite" : "Bianco",
+    "DICESONICE.ColorCustom" : "- Personalizzato -",
     "DICESONICE.ColorFoundry" : "Foundry VTT",
+    "DICESONICE.ColorBronze" : "Thylean Bronze",
+    "DICESONICE.ColorDragons" : "Here be Dragons",
+    "DICESONICE.ColorBirdUp" : "Bird Up",
+    "DICESONICE.ColorCoinDefault" : "Moneta (interno)",
 
     "DICESONICE.DamageTypes" : "Tipo Danno",
     "DICESONICE.ThemesSoNice" : "Temi Veramente Belli",
     "DICESONICE.AcquiredTaste" : "Un Tocco di Gusto",
     "DICESONICE.Colors" : "Colori",
 
+    "DICESONICE.MaterialPlastic": "Plastica",
+    "DICESONICE.MaterialMetal": "Metallo",
+    "DICESONICE.MaterialGlass": "Vetro",
+    "DICESONICE.MaterialWood": "Legno",
+    "DICESONICE.MaterialChrome" : "Cromato",
+    "DICESONICE.MaterialAuto": "Auto (Tema/Texture)",
+
     "DICESONICE.System.Standard" : "Standard",
-    "DICESONICE.System.Dot" : "Dot"
+    "DICESONICE.System.FoundryVTT" : "Foundry VTT",
+    "DICESONICE.System.Dot" : "Punti (Bianco)",
+    "DICESONICE.System.DotBlack" : "Punti (Nero)",
+
+    "DICESONICE.SurfaceFelt" : "Feltro",
+    "DICESONICE.SurfaceWoodTable" : "Tavolo in legno",
+    "DICESONICE.SurfaceWoodTray" : "Vassoio in legno",
+    "DICESONICE.SurfaceMetal" : "Metallo",
+
+    "DICESONICE.CanvasZIndexOver": "Sopra le schede",
+    "DICESONICE.CanvasZIndexUnder": "Sotto le schede",
+
+    "DICESONICE.ThrowingForceWeak": "Debole",
+    "DICESONICE.ThrowingForceMedium" : "Media",
+    "DICESONICE.ThrowingForceStrong" : "Forte"
 }
